# word-template-filler

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
demo/: CMakeLists.txt
src/: CMakeLists.txt  word_tf.cpp  word_tf.h
